fix: prevent slider controls from overlapping header

--- a/src/shared/layouts/MainLayouts/Header/Header.module.scss
+++ b/src/shared/layouts/MainLayouts/Header/Header.module.scss
@@ -7,7 +7,7 @@ $font-size-s: 12px;
 .header {
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 10000;
   background-color: var(--bg-dark-color);
   color: var(--text-light-color);
 }
